# kuda-cli

./: .gitignore  README.md  kuda.spec  main.py  pyproject.toml
kuda_cli/: accounts.py  billing_and_betting.py  card.py  config.py  gift_card.py  main.py  savings.py  transaction.py  utils.py
