[tool.poetry]
name = "kuda-cli"
version = "0.1.0"
description = ""
authors = ["Gbenga Adeyi <adeyigbenga005@gmail.com>"]
readme = "README.md"
packages = [{include = "kuda_cli"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
typer = {extras = ["all"], version = "^0.9.0"}
pykuda2 = "^0.1.2"

[tool.poetry.scripts]
kuda = "kuda_cli.main:run"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.269"
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
